# chord-recognition

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  deploy_hf.sh  pyproject.toml  run.sh  start.sh
scripts/: recognize.py
src/chord_rec/: api.py  chromagram.py  constants.py  data_utils.py  evaluation.py  plotting.py  recognition.py
src/chord_rec/api/: __init__.py  routes.py
src/chord_rec/data/matrices/: mpb_basic.csv  mpb_extended.csv
tests/: test_api.py  test_chromagram.py  test_evaluation.py  test_recognition.py
tests/api/: test_api.py
tests/unit/: test_data_utils.py  test_recognition.py
