[project]
name = "chord-recognition"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "pandas",
    "librosa",
    "numba",
    "libfmp",
    "pydantic",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chord_rec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
